@@ -1,4 +1,4 @@
-VERSION = 0.2.0-alpha
+VERSION = `cat VERSION`
 RUBY = ruby
 
 all: build
@@ -30,7 +30,7 @@ site-install:
 dist:
 	-rm -rf ruby-oci8-$(VERSION)
 	mkdir ruby-oci8-$(VERSION)
-	tar cf - `cat MANIFEST` | (cd ruby-oci8-$(VERSION); tar xf - )
+	tar cf - `cat dist-files` | (cd ruby-oci8-$(VERSION); tar xf - )
 	tar cfz ruby-oci8-$(VERSION).tar.gz ruby-oci8-$(VERSION)
 
 dist-check: dist
